force-app/main/default/objects/Clinics__c/Clinics__c.object-meta.xml
<CustomObject>
    <label>Clinic</label>
    <nameField>
        <label>Clinics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>