force-app/main/default/objects/Clinics__c/fields/ANZARD_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>ANZARD_Unit_Number__c</fullName>
    <label>ANZARD Unit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>