force-app/main/default/objects/Clinics__c/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>