force-app/main/default/objects/Clinics__c/fields/Clinic_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Account_Number__c</fullName>
    <label>Clinic Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>