force-app/main/default/objects/Clinics__c/fields/Clinic_Address__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Address__c</fullName>
    <label>Clinic Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>