force-app/main/default/objects/Clinics__c/fields/Clinic_BSB__c.field-meta.xml
<CustomField>
    <fullName>Clinic_BSB__c</fullName>
    <label>Clinic BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>