force-app/main/default/objects/Clinics__c/fields/Clinic_Email__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Email__c</fullName>
    <label>Clinic Email</label>
    <type>Email</type>
</CustomField>