force-app/main/default/objects/Clinics__c/fields/Clinic_Logo__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Logo__c</fullName>
    <description>Displays the Clinic&apos;s logo on the Record Page</description>
    <label>Clinic Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>