force-app/main/default/objects/Clinics__c/fields/Lab_Email__c.field-meta.xml
<CustomField>
    <fullName>Lab_Email__c</fullName>
    <label>Lab Email</label>
    <type>Email</type>
</CustomField>