force-app/main/default/objects/Clinics__c/fields/LSPN__c.field-meta.xml
<CustomField>
    <fullName>LSPN__c</fullName>
    <description>Location Specific Practice Number - Medicare Field</description>
    <label>LSPN</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>