force-app/main/default/objects/Clinics__c/fields/Nursing_Email__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Email__c</fullName>
    <label>Nursing Email</label>
    <type>Email</type>
</CustomField>