force-app/main/default/objects/Clinics__c/fields/RTAC_Accredited_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>RTAC_Accredited_Unit_Number__c</fullName>
    <label>(RTAC) Accredited Unit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>